Ignore logger in graph serialization test